RESOLVED FIXED143120
Optimized Fullscreen fails to cleanup becuase of no longer necessary release of m_playerController in exitFullscreen()
https://bugs.webkit.org/show_bug.cgi?id=143120
Summary Optimized Fullscreen fails to cleanup becuase of no longer necessary release ...
Jeremy Jones
Reported 2015-03-26 16:31:33 PDT
Optimized Fullscreen fails to cleanup becuase of no longer necessary release of m_playerController in exitFullscreen()
Attachments
Patch (1.93 KB, patch)
2015-03-26 16:36 PDT, Jeremy Jones
eric.carlson: review+
Patch for landing. (1.93 KB, patch)
2015-03-26 22:44 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2015-03-26 16:36:01 PDT
Jeremy Jones
Comment 2 2015-03-26 16:37:07 PDT
Eric Carlson
Comment 3 2015-03-26 17:29:12 PDT
Comment on attachment 249540 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=249540&action=review > Source/WebCore/ChangeLog:11 > + WebVideoFullscreenInterfaceAVKit::cleanupFullscreenInternal(). Releaseing it prematurely can actually prevent the exit Nit: "Releaseing"-" "Releasing"
Jon Lee
Comment 4 2015-03-26 18:38:11 PDT
Jeremy Jones
Comment 5 2015-03-26 22:43:54 PDT
(In reply to comment #3) > Comment on attachment 249540 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=249540&action=review > > > Source/WebCore/ChangeLog:11 > > + WebVideoFullscreenInterfaceAVKit::cleanupFullscreenInternal(). Releaseing it prematurely can actually prevent the exit > > Nit: "Releaseing"-" "Releasing" Fixes that and three other typos!
Jeremy Jones
Comment 6 2015-03-26 22:44:00 PDT
Created attachment 249552 [details] Patch for landing.
WebKit Commit Bot
Comment 7 2015-03-26 23:37:32 PDT
Comment on attachment 249552 [details] Patch for landing. Clearing flags on attachment: 249552 Committed r182052: <http://trac.webkit.org/changeset/182052>
Note You need to log in before you can comment on or make changes to this bug.